--- a/imdb-mini-project/gradle.properties
+++ b/imdb-mini-project/gradle.properties
@@ -1,16 +1,20 @@
 #Gradle
 org.gradle.jvmargs=-Xmx4G
 org.gradle.caching=true
-org.gradle.configuration-cache=true
+org.gradle.configuration-cache=false
 org.gradle.daemon=true
 org.gradle.parallel=true
+org.gradle.java.installations.auto-detect=false
+org.gradle.java.installations.auto-download=false
 
 #Kotlin
 kotlin.code.style=official
 kotlin.daemon.jvmargs=-Xmx4G
 kotlin.native.binary.gc=cms
 kotlin.incremental.wasm=true
+kotlin.native.ignoreDisabledTargets=true
 
 #Android
 android.useAndroidX=true
 android.nonTransitiveRClass=true
+
