--- a/imdb-mini-project/sample/composeApp/src/androidMain/AndroidManifest.xml
+++ b/imdb-mini-project/sample/composeApp/src/androidMain/AndroidManifest.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
             android:icon="@android:mipmap/sym_def_app_icon"
             android:label="sample"
+            android:usesCleartextTraffic="true"
             android:theme="@android:style/Theme.Material.NoActionBar">
         <activity
-            android:name=".AppActivity"
+            android:name=".MainActivity"
             android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
             android:launchMode="singleInstance"
             android:windowSoftInputMode="adjustPan"
@@ -14,7 +16,6 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
-                <uses-permission android:name="android.permission.INTERNET" />
             </intent-filter>
         </activity>
     </application>
